# speech-translate-rev

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE.md  README.md  Run.pyw  SECURITY.md  SUPPORT.md  Speech Translate.lnk  build.py  build_patch.py  build_windows.py  create_pythonw_shortcut.ps1  installer.iss  pyproject.toml  requirements-dev.txt  requirements-py314.txt  requirements.txt  run_tests.ps1  setup.py  speech_translate1.rar  tmp_get_state.py  tmp_test_save_settings.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: architecture.md  ui-design-guide.md
scratch/: test_polling.py  test_size.py  test_tqdm.py  test_tqdm2.py  test_tqdm3.py
scripts/: verify_frozen_recording_modules.py
speech_translate/: __main__.py  _constants.py  _logging.py  _path.py  _version.py  app_runtime.py  app_startup_controller.py  app_tray.py  bridge_legacy_facade.py  bridge_runtime_state.py  controller_protocols.py  controller_settings.py  detached_window_api.py  detached_window_controller.py  detached_window_geometry.py  detached_window_native.py  detached_window_runtime.py  detached_window_settings.py  detached_windows.py  import_queue_manager.py  import_queue_runtime.py  import_queue_state.py  import_queue_view.py  import_queue_workflows.py  linker.py  live_text_service.py  log_helpers.py  main_window_controller.py  model_manager.py  model_manager_runtime.py  model_manager_workflows.py  model_selection.py  recording_controller.py  runtime_bootstrap.py  runtime_deps.py  runtime_registry.py  settings_runtime.py  state_view_builder.py  state_view_settings.py  system_settings_controller.py  (+12 more)
test/: app_runtime_test.py  app_startup_controller_test.py  app_tray_test.py  audio_device_test.py  audio_file_batch_domain_test.py  audio_file_execution_runtime_test.py  audio_file_postprocess_workflows_test.py  audio_file_test.py  audio_file_workflows_test.py  audio_record_test.py  controller_settings_test.py  detached_window_controller_test.py  detached_window_runtime_test.py  detached_windows_test.py  (+38 more)
(+79 files in other folders)
